CR-2009-01-28-0: Bugfix:     - removed TS menu item 29
                             - added error reporting to remote_file_mkdir()
                 Review:     DG

DG-2009-01-28-1: Cleanup:    DRMAA link redirection failed in rare cases.
                 Review:     CR

DG-2009-01-28-0: Cleanup:    Installed new Java DRMAA Junit 0.5 lib. 
                 Review:     SH

JG-2009-01-27-0: Enhancem.:  new test for issue 2329
                             cleanup
                 Review:     DG, RD

MG-2009-01-27-0: Enhancem:   Test for hedeby issue 570
                 Review:     RH

CR-2009-01-27-1: Enhancem.:  added verification code to install_core_system 
                             check that verifies the xterm binary path 
                             at execd host installation
                 Review:     RD

RD-2009-01-27-0: Bugfix:     fixed client_ar test
                 Review:     CR

CR-2009-01-27-0: Enhancem.:  Enhanced scheduler reconnect test to also test
                             event client timeout
                 Review:     RD

RH-2009-01-26-0: Enhancem.:  New cli option --get_pw_command added. With this 
                             option the testsuite will use an external command 
                             to query passwords
                 Review:     JG

AH-2009-01-22-0: Enhancem.:  Added new test bugs/issuezilla/2864
                 Bugfix:     Removed disabling/enabling all.q workaround in 
                             bugs/issuezilla/2378
                 Review:     RD

RD-2009-01-21-0: Enhancem.:  Added two subordinate tests
                 Review:     CR

CR-2009-01-21-0: Bugfix:     o fixed test for issue 2564
                             o fixed test for issue 2028
                 Enhancem.:  New sge_procedures procedure:
                             wait_for_connected_scheduler()
                 Review:     RD

MG-2009-01-21-0: Enhancem:   Test for hedeby issue 569 + some small fix to test issue 568